Bug 402302 - Saving confirmation asked even for unfilled operation
Summary: Saving confirmation asked even for unfilled operation
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.2
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-18 14:10 UTC by Alexander Potashev
Modified: 2018-12-19 08:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2018-12-18 14:10:02 UTC
SUMMARY
Saving confirmation asked even for unfilled operation.

STEPS TO REPRODUCE
1. go to Operations
2. click on empty row to the bottom of all operations
3. go to another section of app, e.g. Summary

OBSERVED RESULT
Kmymoney asks if I want to save an operation after editing.

EXPECTED RESULT
Should just change to Summary without confirmation because I made no changes.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Fedora 29
(available in About System)
KDE Plasma Version: 5.14.4
KDE Frameworks Version: 5.52.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Jack 2018-12-18 17:33:19 UTC
While this may be a valid wishlist, I suspect it's either NOT A BUG or "can't fix" (not WONTFIX.)  Although I can't find an old bug for it, I'm pretty sure it has been discussed (I think I'm the one who brought it up) on the dev mailing list.

As I remember, the issue is that often, when you click outside the currently open transaction in the ledger, it is the Window Manager that traps the click, and KMM is informed of it in a way it that it has to decide whether to save or cancel the transaction before it can tell whether or not there have actually been any changes.  One of the developers would have to confirm this, and also whether or not it is still true.  If I can actually find one of those messages, I'll post the link here.
Comment 2 Thomas Baumgart 2018-12-19 08:14:10 UTC
Git commit 7c6b5a8e02e8a9eaacc68a56e38886dc2a4b95f1 by Thomas Baumgart.
Committed on 19/12/2018 at 08:15.
Pushed by tbaumgart into branch '5.0'.

Don't post superfluous question

In case the creation of a new transaction is started but no data was
entered and the user clicks on an area outside of the transaction editor
a confirmation message popped up asking if he wants to save the data
(when there was none). This has now been modified so that the editor is
silently closed in case the 'Enter' button is disabled.

As a side effect, one of the questions was adjusted to reflect the
actual situation.
FIXED-IN: 5.0.3

M  +11   -0    kmymoney/dialogs/transactioneditor.cpp
M  +8    -0    kmymoney/dialogs/transactioneditor.h
M  +7    -2    kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/7c6b5a8e02e8a9eaacc68a56e38886dc2a4b95f1